chore: update dependencies and refactor redirect logic for improved error handling

--- a/firebase/redirect_webpage/public/index.html
+++ b/firebase/redirect_webpage/public/index.html
@@ -20,12 +20,13 @@
         font-family: "Helvetica Neue", Helvetica, Arial;
       }
     </style>
+    <script type="text/javascript" src="/main.js"></script>
   </head>
   <body>
     <div class="center">
       <p id="msg">Please wait... while we redirect you to clipboard app.</p>
     </div>
 
-    <script type="text/javascript" src="./load.js"></script>
+    
   </body>
 </html>
